style(downloadLabeledIcon) : fix alignment

--- a/theme/themes/eea/extras/downloadLabeledIcon.less
+++ b/theme/themes/eea/extras/downloadLabeledIcon.less
@@ -7,13 +7,18 @@
         Download Labeled Icon
 *******************************/
 .eea.download.labeled.icon {
+  width: @downloadLabeledIconWidth;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   .label {
-    font-size: 14px;
-    color: @deepBlue;
+    width: @downloadLabeledIconLabelWidth;
+    font-size: @downloadLabeledIconLabelFontSize;
+    color: @downloadLabeledIconLabelColor;
     cursor: pointer;
   }
   .icon.wrapper {
-    width: 68px;
+    width: 100%;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -22,43 +27,48 @@
       font-size: @downloadLabeledIconIconFontSize;
       color: @mediumPersianBlue;
       display: flex;
-      width: @iconWidth;
+      width: @downloadLabeledIconIconWidth;
       height: @downloadLabeledIconWrapperIconHeight;
       align-items: center;
     }
   }
 
-  .link.wrapper {
-    position: absolute;
-    cursor: pointer;
-    background-color: @downloadLabeledIconLinkWrapperBackgroundColor;
-    z-index: @downloadLabeledIconLinkWrapperZIndex;
-    margin-right: @downloadLabeledIconLinkWrapperMarginRight;
-    width: @downloadLabeledIconLinkWrapperWidth;
-    padding-left: @downloadLabeledIconLinkWrapperPaddingLeft;
-    padding-top: @downloadLabeledIconLinkWrapperPaddingTop;
-    ul {
-      list-style-type: none;
-      margin-block-start: @downloadLabeledIconUlMarginBlockStart;
-      padding-inline-start: @downloadLabeledIconUlPaddingInlineStart;
-      a {
-        display: flex;
-        justify-content: space-around;
-        font-weight: @downloadLabeledIconALinkontWeight;
-        font-size: @downloadLabeledIconLinkFontSize;
-        .icon {
-          font-size: @downloadLabeledIconLinkIconFontSize;
+  .dropdown {
+    width: @downloadLabeledIconDropdownWIdth;
+
+    .link.wrapper {
+      position: absolute;
+      cursor: pointer;
+      background-color: @downloadLabeledIconLinkWrapperBackgroundColor;
+      z-index: @downloadLabeledIconLinkWrapperZIndex;
+      margin-right: @downloadLabeledIconLinkWrapperMarginRight;
+      width: @downloadLabeledIconLinkWrapperWidth;
+      padding-left: @downloadLabeledIconLinkWrapperPaddingLeft;
+      padding-top: @downloadLabeledIconLinkWrapperPaddingTop;
+      ul {
+        list-style-type: none;
+        margin-block-start: @downloadLabeledIconUlMarginBlockStart;
+        padding-inline-start: @downloadLabeledIconUlPaddingInlineStart;
+        a {
+          display: flex;
+          justify-content: space-around;
+          font-weight: @downloadLabeledIconALinkFontWeight;
+          font-size: @downloadLabeledIconLinkFontSize;
+          .icon {
+            font-size: @downloadLabeledIconLinkIconFontSize;
+            line-height: @downloadLabeledIconLinkIconLineHeight;
+          }
+        }
+        a:hover {
+          color: @downloadLabeledIconALinkColorHover;
+        }
+        li:hover {
+          background-color: @downloadLabeledIconLiHover;
         }
       }
-      a:hover {
-        color: @downloadLabeledIconALinkColorHover;
-      }
-      li:hover {
-        background-color: @downloadLabeledIconLiHover;
-      }
     }
-  }
-  .link.wrapper.hidden {
-    display: none;
+    .link.wrapper.hidden {
+      display: none;
+    }
   }
 }
